--- a/static/style3.css
+++ b/static/style3.css
@@ -208,306 +208,6 @@ a.article:hover {
   color: #fff !important;
 }
 
-.product-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-}
-.product-image {
-  width: 210px;
-  height: 210px;
-}
-
-/* Icon logo */
-.iconfeed-dmx {
-  background-position: -2px -57px;
-  width: 53px;
-  height: 53px;
-}
-.iconfeed-tgdd {
-  background-position: 0 -2px;
-  width: 53px;
-  height: 53px;
-}
-.iconfeed-radio {
-  background-position: -57px -32px;
-  width: 19px;
-  height: 19px;
-}
-.iconfeed-radio.active {
-  background-position: -57px -57px;
-  width: 19px;
-  height: 19px;
-}
-
-[class^="icon-"],
-[class*="icon-"] {
-  background-image: url(static/images/logo/icon_common@2x.png?v=1);
-  background-repeat: no-repeat;
-  display: inline-block;
-  height: 30px;
-  width: 30px;
-  line-height: 30px;
-  vertical-align: middle;
-  background-size: 300px 200px;
-}
-.icon-logo {
-  background-position: 0 0;
-  height: 24px;
-  width: 141px;
-}
-.icon-search {
-  background-position: -150px 0;
-  height: 17px;
-  width: 17px;
-}
-.icon-cart {
-  background-position: -175px 0;
-  height: 18px;
-  width: 20px;
-}
-.icon-facebook {
-  background-position: -225px 0;
-  height: 18px;
-  width: 18px;
-}
-.icon-youtube {
-  background-position: -200px 0;
-  height: 18px;
-  width: 18px;
-}
-.icon-dmx {
-  background-position: 0 -30px;
-  height: 18px;
-  width: 103px;
-}
-.icon-bhx {
-  background-position: -110px -30px;
-  height: 18px;
-  width: 81px;
-}
-.icon-maiam {
-  background-position: 0 -60px;
-  height: 18px;
-  width: 71px;
-}
-.icon-congthuong {
-  background-position: -200px -30px;
-  height: 24px;
-  width: 79px;
-}
-.icon-khieunai {
-  background-position: -250px 0;
-  height: 25px;
-  width: 25px;
-}
-.icon-protected {
-  background-position: -80px -60px;
-  height: 24px;
-  width: 122px;
-}
-.icon-star {
-  background-position: -205px -60px;
-  height: 12px;
-  width: 13px;
-}
-.icon-star-half {
-  background-position: -205px -74px;
-  height: 12px;
-  width: 13px;
-}
-.icon-star-dark {
-  background-position: -225px -60px;
-  height: 12px;
-  width: 13px;
-}
-.icon-ytb-big {
-  background-position: 0 -90px;
-  height: 31px;
-  width: 43px;
-}
-.icon-ytb-simple {
-  background-position: -45px -90px;
-  height: 22px;
-  width: 30px;
-}
-.icon-dienthoai {
-  background-position: -85px -90px;
-  height: 20px;
-  width: 13px;
-}
-.icon-laptop {
-  background-position: -105px -90px;
-  height: 20px;
-  width: 25px;
-}
-.icon-tablet {
-  background-position: -140px -90px;
-  height: 20px;
-  width: 16px;
-}
-.icon-phukien {
-  background-position: -165px -90px;
-  height: 18px;
-  width: 22px;
-}
-.icon-dhthongminh {
-  background-position: -195px -90px;
-  height: 22px;
-  width: 17px;
-}
-.icon-dhthoitrang {
-  background-position: -220px -90px;
-  height: 23px;
-  width: 15px;
-}
-.icon-pcmayin {
-  background-position: -240px -90px;
-  height: 16px;
-  width: 23px;
-}
-.icon-filter {
-  background-position: -285px 0;
-  height: 14px;
-  width: 11px;
-}
-.icon-check {
-  background-position: -245px -60px;
-  height: 7px;
-  width: 10px;
-}
-.icon-info {
-  background-position: -265px -60px;
-  height: 16px;
-  width: 16px;
-}
-.icon-sticky-search {
-  background-position: 0 -125px;
-  height: 15px;
-  width: 15px;
-}
-.icon-sticky-chat {
-  background-position: -25px -125px;
-  height: 20px;
-  width: 24px;
-}
-.icon-sticky-cart {
-  background-position: -55px -125px;
-  height: 21px;
-  width: 23px;
-}
-.icon-sticky-ss {
-  background-position: -85px -125px;
-  height: 20px;
-  width: 22px;
-}
-.icon-deletess {
-  background-position: -165px -125px;
-  height: 16px;
-  width: 16px;
-}
-.icon-tickbox {
-  background-position: -115px -125px;
-  height: 18px;
-  width: 18px;
-}
-.icon-findcp {
-  background-position: -190px -125px;
-  height: 19px;
-  width: 19px;
-}
-.icon-location {
-  background-position: -283px -32px;
-  width: 12px;
-  height: 15px;
-}
-
-/* Footer */
-.footer {
-  clear: both;
-  background-color: #f8f9fa;
-  border-top: 1px solid #e2e2e2;
-  margin-top: 35px;
-  left: 0;
-  bottom: 0;
-}
-.footer__top {
-  padding: 15px 0 5px;
-}
-.footer__col {
-  float: left;
-  width: 25%;
-  text-align: left;
-  font-size: 0.8em;
-}
-.f-listmenu li {
-  margin-bottom: 10px;
-}
-.f-listmenu li.hidden {
-  display: none;
-}
-.f-listmenu li a {
-  color: #333;
-  line-height: 21px;
-}
-.f-listmenu li a:hover {
-  color: #2f80ed;
-}
-.f-listmenu .arrow {
-  position: relative;
-}
-.f-listmenu .arrow::before {
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 5px solid #333;
-  content: "";
-  position: absolute;
-  top: 7px;
-  right: -15px;
-}
-.f-listtel__content {
-  line-height: 21px;
-  margin-top: 10px;
-}
-.f-listtel__content a {
-  color: #2f80ed;
-  font-weight: bold;
-}
-.f-listtel__content > span {
-  width: 65px;
-  display: inline-block;
-}
-.f-social {
-  margin-bottom: 20px;
-}
-.f-social a {
-  color: #2f80ed;
-  margin-right: 10px;
-}
-.f-social a i {
-  margin-right: 5px;
-}
-.f-certify {
-  margin-bottom: 20px;
-}
-.f-certify a {
-  margin-right: 20px;
-}
-.f-website-title {
-  margin-bottom: 10px;
-}
-.f-website a {
-  margin-right: 10px;
-}
-.copyright {
-  background-color: #f1f1f1;
-  padding: 15px 0;
-}
-.copyright p {
-  color: #666;
-  font-size: 12px;
-}
-
 /* ---------------------------------------------------
     CONTENT STYLE
 ----------------------------------------------------- */
@@ -519,4 +219,312 @@ a.article:hover {
   position: absolute;
   top: 0;
   right: 0;
+}
+
+.product-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+  .product-image {
+    width: 210px;
+    height: 210px;
+  }
+  
+  /* Icon logo */
+  .iconfeed-dmx {
+    background-position: -2px -57px;
+    width: 53px;
+    height: 53px;
+  }
+  .iconfeed-tgdd {
+    background-position: 0 -2px;
+    width: 53px;
+    height: 53px;
+  }
+  .iconfeed-radio {
+    background-position: -57px -32px;
+    width: 19px;
+    height: 19px;
+  }
+  .iconfeed-radio.active {
+    background-position: -57px -57px;
+    width: 19px;
+    height: 19px;
+  }
+  
+  [class^="icon-"],
+  [class*="icon-"] {
+    background-image: url(static/images/logo/icon_common@2x.png?v=1);
+    background-repeat: no-repeat;
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    vertical-align: middle;
+    background-size: 300px 200px;
+  }
+  .icon-logo {
+    background-position: 0 0;
+    height: 24px;
+    width: 141px;
+  }
+  .icon-search {
+    background-position: -150px 0;
+    height: 17px;
+    width: 17px;
+  }
+  .icon-cart {
+    background-position: -175px 0;
+    height: 18px;
+    width: 20px;
+  }
+  .icon-facebook {
+    background-position: -225px 0;
+    height: 18px;
+    width: 18px;
+  }
+  .icon-youtube {
+    background-position: -200px 0;
+    height: 18px;
+    width: 18px;
+  }
+  .icon-dmx {
+    background-position: 0 -30px;
+    height: 18px;
+    width: 103px;
+  }
+  .icon-bhx {
+    background-position: -110px -30px;
+    height: 18px;
+    width: 81px;
+  }
+  .icon-maiam {
+    background-position: 0 -60px;
+    height: 18px;
+    width: 71px;
+  }
+  .icon-congthuong {
+    background-position: -200px -30px;
+    height: 24px;
+    width: 79px;
+  }
+  .icon-khieunai {
+    background-position: -250px 0;
+    height: 25px;
+    width: 25px;
+  }
+  .icon-protected {
+    background-position: -80px -60px;
+    height: 24px;
+    width: 122px;
+  }
+  .icon-star {
+    background-position: -205px -60px;
+    height: 12px;
+    width: 13px;
+  }
+  .icon-star-half {
+    background-position: -205px -74px;
+    height: 12px;
+    width: 13px;
+  }
+  .icon-star-dark {
+    background-position: -225px -60px;
+    height: 12px;
+    width: 13px;
+  }
+  .icon-ytb-big {
+    background-position: 0 -90px;
+    height: 31px;
+    width: 43px;
+  }
+  .icon-ytb-simple {
+    background-position: -45px -90px;
+    height: 22px;
+    width: 30px;
+  }
+  .icon-dienthoai {
+    background-position: -85px -90px;
+    height: 20px;
+    width: 13px;
+  }
+  .icon-laptop {
+    background-position: -105px -90px;
+    height: 20px;
+    width: 25px;
+  }
+  .icon-tablet {
+    background-position: -140px -90px;
+    height: 20px;
+    width: 16px;
+  }
+  .icon-phukien {
+    background-position: -165px -90px;
+    height: 18px;
+    width: 22px;
+  }
+  .icon-dhthongminh {
+    background-position: -195px -90px;
+    height: 22px;
+    width: 17px;
+  }
+  .icon-dhthoitrang {
+    background-position: -220px -90px;
+    height: 23px;
+    width: 15px;
+  }
+  .icon-pcmayin {
+    background-position: -240px -90px;
+    height: 16px;
+    width: 23px;
+  }
+  .icon-filter {
+    background-position: -285px 0;
+    height: 14px;
+    width: 11px;
+  }
+  .icon-check {
+    background-position: -245px -60px;
+    height: 7px;
+    width: 10px;
+  }
+  .icon-info {
+    background-position: -265px -60px;
+    height: 16px;
+    width: 16px;
+  }
+  .icon-sticky-search {
+    background-position: 0 -125px;
+    height: 15px;
+    width: 15px;
+  }
+  .icon-sticky-chat {
+    background-position: -25px -125px;
+    height: 20px;
+    width: 24px;
+  }
+  .icon-sticky-cart {
+    background-position: -55px -125px;
+    height: 21px;
+    width: 23px;
+  }
+  .icon-sticky-ss {
+    background-position: -85px -125px;
+    height: 20px;
+    width: 22px;
+  }
+  .icon-deletess {
+    background-position: -165px -125px;
+    height: 16px;
+    width: 16px;
+  }
+  .icon-tickbox {
+    background-position: -115px -125px;
+    height: 18px;
+    width: 18px;
+  }
+  .icon-findcp {
+    background-position: -190px -125px;
+    height: 19px;
+    width: 19px;
+  }
+  .icon-location {
+    background-position: -283px -32px;
+    width: 12px;
+    height: 15px;
+  }
+  
+  /* Footer */
+  .hide-footer {
+      display: none;
+    }
+  .footer {
+    clear: both;
+    background-color: #f8f9fa;
+    border-top: 1px solid #e2e2e2;
+    margin-top: 35px;
+    left: 0;
+    bottom: 0;
+  }
+  .footer__top {
+    padding: 15px 0 5px;
+  }
+  .footer__col {
+    float: left;
+    width: 25%;
+    text-align: left;
+    font-size: 0.8em;
+    box-sizing: border-box; /* ensures padding and border are included in element's total width and height */
+  }
+  .f-listmenu li {
+    margin-bottom: 10px;
+  }
+  .f-listmenu li.hidden {
+    display: none;
+  }
+  .f-listmenu li a {
+    color: #333;
+    line-height: 21px;
+  }
+  .f-listmenu li a:hover {
+    color: #2f80ed;
+  }
+  .f-listmenu .arrow {
+    position: relative;
+  }
+  .f-listmenu .arrow::before {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #333;
+    content: "";
+    position: absolute;
+    top: 7px;
+    right: -15px;
+  }
+  .f-listtel__content {
+    line-height: 21px;
+    margin-top: 10px;
+  }
+  .f-listtel__content a {
+    color: #2f80ed;
+    font-weight: bold;
+  }
+  .f-listtel__content > span {
+    width: 65px;
+    display: inline-block;
+  }
+  .f-social {
+    margin-bottom: 20px;
+  }
+  .f-social a {
+    color: #2f80ed;
+    margin-right: 10px;
+  }
+  .f-social a i {
+    margin-right: 5px;
+  }
+  .f-certify {
+    margin-bottom: 20px;
+  }
+  .f-certify a {
+    margin-right: 20px;
+  }
+  .f-website-title {
+    margin-bottom: 10px;
+  }
+  .f-website a {
+    margin-right: 10px;
+  }
+  .copyright {
+    background-color: #f1f1f1;
+    padding: 15px 0;
+  }
+  .copyright p {
+    color: #666;
+    font-size: 12px;
+  }
+
+.hide-on-login {
+    display: none;
 }
