--- a/templates/register.html
+++ b/templates/register.html
@@ -1,130 +1,127 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Log In
+Log In
 {% endblock %}
 
 {% block main %}
-<script >
-  function right()
-  {
+<script>
+  function right() {
     document.getElementById("display").innerHTML = "✔"
   }
 </script>
 
- <div  class="mainregister" style="position:relative;width: 400px;left:4px;background:white;height: 500px;box-shadow: black 12px 19px 19px;border-radius: 40px">
-<br>
-<br>
-<center><b style="font-size: 25px;"><h3 style="color : black;width:150px;border-radius: 40px" >Register</h3></b><br></center>
+<div class="mainregister"
+  style="position:relative;width: 400px;left:4px;background:white;height: 500px;box-shadow: black 12px 19px 19px;border-radius: 40px">
+  <br>
+  <br>
+  <center><b style="font-size: 25px;">
+      <h3 style="color : black;width:150px;border-radius: 40px">Register</h3>
+    </b><br></center>
 
-<form action="/register" method="post" enctype="multipart/form-data" >
+  <form action="/register" method="post" enctype="multipart/form-data">
 
-<div class="form-group">
-   
-  
-<br>
-<br>
-  <div class="form-group">
-    <input
-      autocomplete="off"
-      autofocus
-      class="form-control"
-      name="username"
-      placeholder="🗒 Username"
-      id ="hoverin"
-      type="text"
-      style="border-radius:50px"
-    />
-  </div>
+    <div class="form-group">
+
+
+      <br>
+      <br>
+      <div class="form-group">
+        <input autocomplete="off" autofocus class="form-control" name="username" placeholder="🗒 Username" id="hoverin"
+          type="text" style="border-radius:50px" />
+      </div>
 
 
 
-  {% if (messager == 1 ) %}
-  <center>
-   
-            <header class="inv" style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:200px">
+      {% if (messager == 1 ) %}
+      <center>
 
-                 &#9997  Enter username.
+        <header class="inv"
+          style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:200px">
 
-            </header>
-            <br>
-</center>
-{% endif %}
-  <div class="form-group">
-    <input
-      class="form-control"
-      name="password"
-      placeholder="&#128273 Password"
-      id ="hoverin"
-      type="password"
-      style="border-radius:50px"
-    />
-    </div>
+          &#9997 Enter username.
+
+        </header>
+        <br>
+      </center>
+      {% endif %}
+      <div class="form-group">
+        <input class="form-control" name="password" placeholder="&#128273 Password" id="hoverin" type="password"
+          style="border-radius:50px" />
+      </div>
 
 
       {% if (messager == 2 ) %}
 
-  <center>
-            <header  style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:200px">
+      <center>
+        <header
+          style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:200px">
 
-                  &#9997 Enter password.
+          &#9997 Enter password.
 
-            </header>
-            <br>
-            </center>
- {% endif %}
+        </header>
+        <br>
+      </center>
+      {% endif %}
 
-  
-  <div class="form-group">
-    <input
-      class="form-control"
-      name="confirmation"
-      id ="hoverin"
-      placeholder="&#128273 Confirm Password"
-      type="password"
-      style="border-radius:50px"
-    />
-  </div>
 
-    {% if (messager == 4 ) %}
-  <center>
-            <header  style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:220px">
+      <div class="form-group">
+        <input class="form-control" name="confirmation" id="hoverin" placeholder="&#128273 Confirm Password"
+          type="password" style="border-radius:50px" />
+      </div>
 
-                  &#9997 Enter confirm password.
+      {% if (messager == 4 ) %}
+      <center>
+        <header
+          style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:220px">
 
-            </header>
-            </center>
- {% endif %}
-<br>
-  <button class="btn btn-success" style="border-radius:50px;width:200px" id="hoverinbtn" type="submit">Register</button>
+          &#9997 Enter confirm password.
 
-  {% if (messager == 3 ) %}
-  <center>
-    <br>
-            <header  style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:300px ">
+        </header>
+      </center>
+      {% endif %}
+      <br>
+      <button class="btn btn-success" style="border-radius:50px;width:200px" id="hoverinbtn"
+        type="submit">Register</button>
 
-                   &#10060 Enter same password and confirm password.
+      {% if (messager == 3 ) %}
+      <center>
+        <br>
+        <header
+          style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:300px ">
 
-            </header>
-              </center>
+          &#10060 Enter same password and confirm password.
 
-            </div>
+        </header>
+      </center>
+      {% endif %}
+    </div>
 
- {% endif %}
- {% if (messager == 5 ) %}
-  <center>
-    <br>
-            <header  style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:220px">
+    {% if (messager == 5 ) %}
+    <center>
+      <br>
+      <header
+        style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:220px">
 
-                  &#9997 Username Already Taken.
+        &#9997 Username Already Taken.
 
-            </header>
-            </center>
- {% endif %}
-</form>
+      </header>
+    </center>
+    {% endif %}
+  </form>
 
 </div>
- 
+
+{% block show_footer %}
+  {% if show_footer is not defined or show_footer %}
+      {# Show the footer if not defined or explicitly set to true #}
+      <footer class="hide-on-login">
+          <!-- Footer content -->
+      </footer>
+  {% endif %}
+{% endblock %}
+
 {% endblock %}
 </body>
+
 </html
