--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,15 +50,19 @@
                     <ul class="navbar-nav ml-auto mt-2"></ul>
                     <li class="nav-item"><a class="nav-link" href="/home">Home Page</a></li>
                     <li class="nav-item"><a class="nav-link" href="/facesetup">Face Recognition Setup</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/add_to_cart">Shopping Cart</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/shopping_cart">Shopping Cart</a></li>
                     <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                 </ul>
                 {% else %}
-                <ul class="navbar-nav ml-auto mt-2"></ul>
-                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-                <a class="navbar-brand" href="/"><span class="blue"><img height="100px" width="400px"
-                            style="position: absolute; left: 460px; top:-10px;" src="/static/h.png"></a>
+                <ul class="navbar-nav ml-auto mt-2">
+                    {% if current_page != 'register' %}
+                    <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                    {% endif %}
+                    {% if current_page != 'login' %}
+                    <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                    {% endif %}
+                    <a class="navbar-brand" href="/"><span class="blue"><img height="100px" width="400px"
+                                style="position: absolute; left: 460px; top:-10px;" src="/static/h.png"></a>
                 </ul>
                 {% endif %}
                 </ul>
@@ -67,15 +71,20 @@
 
         <!-- Page Content  -->
         <div id="content">
+            <!-- <h2 class="main-logo">Thế Giới Đồng Hồ</h2> -->
+            <div class="main-logo">
+                <img src="static/images/logo/Logo-TGDD-MWG.png" alt="Thế Giới Đồng Hồ">
+            </div>
+
             <div class="container-fluid">
 
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
                 </button>
 
-                <!-- Add this where you want the products to be displayed -->
+                
 
-                <h2>Thế Giới Đồng Hồ</h2>
+                <!-- Add this where you want the products to be displayed -->
 
                 <div class="product-grid">
                     {% for product in products %}
@@ -94,8 +103,8 @@
             <center>
 
                 {% block main %}
-                
-                
+
+
                 {% endblock %}
 
                 <!-- jQuery CDN - Slim version (=without AJAX) -->
@@ -137,11 +146,11 @@
                 <!-- Add to card feature -->
                 <script src="js/main.js"></script>
                 {% block show_footer %}
-                    {% if show_footer is not defined or show_footer %}
-                        <footer class="footer">
-                            <!-- Footer content -->
-                        </footer>
-                    {% endif %}
+                {% if show_footer is not defined or show_footer %}
+                <footer class="footer">
+                    <!-- Footer content -->
+                </footer>
+                {% endif %}
                 {% endblock %}
 
                 <!-- Add more footer content here -->
