--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,11 @@ Log In
   style="position: relative; width: 400px; left: 0px; background: white; height: 500px; box-shadow: black 12px 19px 19px; border-radius: 40px">
   <br>
   <br>
-  <center><b style="font-size: 25px;">
+  <center>
+    <b style="font-size: 25px;">
       <h3 style="color: black;width:150px;border-radius: 40px">Login</h3>
-    </b><br></center>
+    </b><br>
+  </center>
 
 
   <form action="/login" method="post">
@@ -24,7 +26,7 @@ Log In
     {% if (messager == 1 ) %}
     <center>
       <header class="inv"
-        style="color:white;box-shadow: 5px 7px 15px black;border: 2px solid red;border-radius: 50px;background-color: red;width:200px">
+        style="color:white; box-shadow: 5px 7px 15px black; border: 2px solid red; border-radius: 50px; background-color: red; width: 200px">
 
         &#9997 Enter username.
 
@@ -35,7 +37,7 @@ Log In
     <br>
 
     <div class="form-group">
-      <input style="border-radius:50px" class="form-control" name="password" placeholder="&#128273 Password"
+      <input style="border-radius:40px" class="form-control" name="password" placeholder="&#128273 Password"
         type="password" id="hoverin" />
     </div>
 
@@ -50,9 +52,11 @@ Log In
     </center>
     {% endif %}
     <br>
-    Or<br>
-    <a href="/facereg">Face Password</a><br>
-    <button class="btn btn-success" type="submit" id="hoverinbtn" style="border-radius:50px;width:200px">Log In</button>
+    Or
+    <br>
+    <a href="/facereg">Face Password</a>
+    <br>
+    <button class="btn btn-success" type="submit" id="hoverinbtn" style="border-radius: 50px; width: 200px">Log In</button>
   </form>
   <br>
   <br>
