--- a/templates/shopping_cart.html
+++ b/templates/shopping_cart.html
@@ -25,7 +25,7 @@ Shopping Cart
             <button>Remove</button>
         </div>
     </div>
-    <a href="/continue-shopping">Continue Shopping</a>
+    <a href="/home">Continue Shopping</a>
     <div id="promo-code">
         <label for="promo">Promo Code:</label>
         <input type="text" id="promo" name="promo">
