--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,21 +51,30 @@
                     <li class="nav-item"><a class="nav-link" href="/home">Home Page</a></li>
                     <li class="nav-item"><a class="nav-link" href="/facesetup">Face Recognition Setup</a></li>
                     <li class="nav-item"><a class="nav-link" href="/shopping_cart">Shopping Cart</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                     <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
                 </ul>
-                {% else %}
+                    {% else %}
                 <ul class="navbar-nav ml-auto mt-2">
                     {% if current_page != 'register' %}
+                    <li class="nav-item"><a class="nav-link" href="/home">Home Page</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/facesetup">Face Recognition Setup</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/shopping_cart">Shopping Cart</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
                     <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                     {% endif %}
                     {% if current_page != 'login' %}
+                    <li class="nav-item"><a class="nav-link" href="/home">Home Page</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/facesetup">Face Recognition Setup</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/shopping_cart">Shopping Cart</a></li>
                     <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
                     {% endif %}
                     <a class="navbar-brand" href="/"><span class="blue"><img height="100px" width="400px"
                                 style="position: absolute; left: 460px; top:-10px;" src="/static/h.png"></a>
                 </ul>
-                {% endif %}
-                </ul>
+                    {% endif %}
             </div>
         </nav>
 
@@ -80,9 +89,7 @@
 
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
-                </button>
-
-                
+                </button>                
 
                 <!-- Add this where you want the products to be displayed -->
                 <div class="product-grid">
@@ -90,7 +97,6 @@
                     <div class="product">
                         <h3 class="product-name">{{ product.name }}</h3>
                         <img src="{{ product.image }}" alt="{{ product.image }}" class="product-image">
-                        <p>{{ product.description }}</p>
                         <p>Price: {{ product.price }}</p>
                         <button class="add-to-cart" data-id="{{ product.id }}">Add to Cart</button>
                     </div>
